fix: set overflow to auto in tab container

--- a/styles.css
+++ b/styles.css
@@ -746,7 +746,7 @@
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
-	overflow-x: scroll;
+	overflow-x: auto;
 	gap: 6px;
 	width: 100%;
 }
